Colab을 통해 생성됨

--- a/심화2_트랜스포머_쉽게구현해보기.ipynb
+++ b/심화2_트랜스포머_쉽게구현해보기.ipynb
@@ -1152,7 +1152,7 @@
         "id": "N47qF-CZ6m26"
       },
       "source": [
-        "def create_padding_mask(seq):\n",
+        "def create_padding_mask(seq): # 패딩된 0 을 false 로 인지못하게 하는것\n",
         "  seq = tf.cast(tf.math.equal(seq, 0), tf.float32)\n",
         "  return seq[:, tf.newaxis, tf.newaxis, :]  # (batch_size, 1, 1, seq_len)"
       ],
